--- a/Crave App/Base.lproj/Main.storyboard
+++ b/Crave App/Base.lproj/Main.storyboard
@@ -206,11 +206,29 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8jg-ph-pQR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="596" y="1446"/>
+            <point key="canvasLocation" x="612" y="2270"/>
         </scene>
         <!--Your Plate-->
         <scene sceneID="MwC-fL-9vo">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7A4-uL-7KJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="GA2-5S-caH">
+                    <connections>
+                        <outlet property="delegate" destination="NZr-fE-VoD" id="aWE-J7-Q4z"/>
+                        <outlet property="searchContentsController" destination="NZr-fE-VoD" id="gR0-yF-NkT"/>
+                        <outlet property="searchResultsDataSource" destination="NZr-fE-VoD" id="FTm-t4-8U3"/>
+                        <outlet property="searchResultsDelegate" destination="NZr-fE-VoD" id="6t3-mp-XRr"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="OK6-5X-FmV">
+                    <connections>
+                        <outlet property="delegate" destination="NZr-fE-VoD" id="LTC-ko-z8N"/>
+                        <outlet property="searchBar" destination="ucr-p9-GNZ" id="boS-1B-psn"/>
+                        <outlet property="searchContentsController" destination="NZr-fE-VoD" id="w3K-cE-gDJ"/>
+                        <outlet property="searchResultsDataSource" destination="NZr-fE-VoD" id="rHn-gC-KnJ"/>
+                        <outlet property="searchResultsDelegate" destination="NZr-fE-VoD" id="hiv-Oc-r3r"/>
+                    </connections>
+                </searchDisplayController>
                 <viewController id="NZr-fE-VoD" customClass="PlateViewController" customModule="Crave_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="eNX-aa-9NK"/>
@@ -293,24 +311,6 @@
                         <outlet property="titleLabel" destination="vLi-oL-2lp" id="Llj-Jv-LYe"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7A4-uL-7KJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="GA2-5S-caH">
-                    <connections>
-                        <outlet property="delegate" destination="NZr-fE-VoD" id="aWE-J7-Q4z"/>
-                        <outlet property="searchContentsController" destination="NZr-fE-VoD" id="gR0-yF-NkT"/>
-                        <outlet property="searchResultsDataSource" destination="NZr-fE-VoD" id="FTm-t4-8U3"/>
-                        <outlet property="searchResultsDelegate" destination="NZr-fE-VoD" id="6t3-mp-XRr"/>
-                    </connections>
-                </searchDisplayController>
-                <searchDisplayController id="OK6-5X-FmV">
-                    <connections>
-                        <outlet property="delegate" destination="NZr-fE-VoD" id="LTC-ko-z8N"/>
-                        <outlet property="searchBar" destination="ucr-p9-GNZ" id="boS-1B-psn"/>
-                        <outlet property="searchContentsController" destination="NZr-fE-VoD" id="w3K-cE-gDJ"/>
-                        <outlet property="searchResultsDataSource" destination="NZr-fE-VoD" id="rHn-gC-KnJ"/>
-                        <outlet property="searchResultsDelegate" destination="NZr-fE-VoD" id="hiv-Oc-r3r"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="596" y="-776"/>
         </scene>
@@ -329,11 +329,31 @@
                         <segue destination="G6V-U0-y7I" kind="relationship" relationship="viewControllers" id="ua7-fk-5Wv"/>
                         <segue destination="gPO-iI-zoC" kind="relationship" relationship="viewControllers" id="JYG-iZ-fGD"/>
                         <segue destination="scQ-gZ-irI" kind="relationship" relationship="viewControllers" id="0yH-E3-djo"/>
+                        <segue destination="coo-JZ-SGj" kind="relationship" relationship="viewControllers" id="Fr1-ph-REo"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L8D-12-Jni" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-224" y="263"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="h4n-d1-N2M">
+            <objects>
+                <viewController id="coo-JZ-SGj" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fPV-h6-gxZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="gZ7-H3-MxK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0Ab-hl-iQ9">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="jKZ-Tv-iTX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cxR-ma-xsp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="596" y="1510"/>
         </scene>
         <!--Search Table View Controller-->
         <scene sceneID="JeY-r8-t6C">
@@ -379,7 +399,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RH0-jP-Imc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1267" y="-776"/>
+            <point key="canvasLocation" x="1273" y="1470"/>
         </scene>
     </scenes>
     <resources>
